--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 src_dir = sonoff
 
 ; *** Uncomment one of the lines below to build/upload only one environment
-;env_default = sonoff
+env_default = sonoff
 ;env_default = sonoff-minimal
 ;env_default = sonoff-basic
 ;env_default = sonoff-classic
@@ -116,10 +116,10 @@ build_flags               = ${esp82xx_defaults.build_flags}
 ; Select one core set for platform and build_flags
 ;platform                  = ${core_2_3_0.platform}
 ;build_flags               = ${core_2_3_0.build_flags}
-platform                  = ${core_2_4_2.platform}
-build_flags               = ${core_2_4_2.build_flags}
-;platform                  = ${core_2_5_0.platform}
-;build_flags               = ${core_2_5_0.build_flags}
+;platform                  = ${core_2_4_2.platform}
+;build_flags               = ${core_2_4_2.build_flags}
+platform                  = ${core_2_5_0.platform}
+build_flags               = ${core_2_5_0.build_flags}
 ;platform                  = ${core_stage.platform}
 ;build_flags               = ${core_stage.build_flags}
 
@@ -150,7 +150,7 @@ upload_speed              = 115200
 upload_resetmethod        = nodemcu
 
 ; *** Upload Serial reset method for Wemos and NodeMCU
-upload_port               = COM5
+upload_port               = COM4
 extra_scripts             = pio/strip-floats.py
 
 ; *** Upload file to OTA server using SCP
