Changed to new version and matched to correct type of Sonoff

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,12 @@
 src_dir = sonoff
 
 ; *** Uncomment one of the lines below to build/upload only one environment
-env_default = sonoff
+;env_default = sonoff
 ;env_default = sonoff-minimal
 ;env_default = sonoff-basic
 ;env_default = sonoff-classic
 ;env_default = sonoff-knx
-;env_default = sonoff-sensors
+env_default = sonoff-sensors
 ;env_default = sonoff-display
 ;env_default = sonoff-BG
 ;env_default = sonoff-BR
@@ -41,7 +41,8 @@ env_default = sonoff
 
 [esp82xx_defaults]
 build_flags               = -D NDEBUG
-                            -mtarget-align
+                            -mtarget-align 
+                            -DUSE_CONFIG_OVERRIDE
                             -Wl,-Map,firmware.map
 
 [core_2_3_0]
@@ -116,10 +117,10 @@ build_flags               = ${esp82xx_defaults.build_flags}
 ; Select one core set for platform and build_flags
 ;platform                  = ${core_2_3_0.platform}
 ;build_flags               = ${core_2_3_0.build_flags}
-;platform                  = ${core_2_4_2.platform}
-;build_flags               = ${core_2_4_2.build_flags}
-platform                  = ${core_2_5_0.platform}
-build_flags               = ${core_2_5_0.build_flags}
+platform                  = ${core_2_4_2.platform}
+build_flags               = ${core_2_4_2.build_flags}
+;platform                  = ${core_2_5_0.platform}
+;build_flags               = ${core_2_5_0.build_flags}
 ;platform                  = ${core_stage.platform}
 ;build_flags               = ${core_stage.build_flags}
 
@@ -150,7 +151,7 @@ upload_speed              = 115200
 upload_resetmethod        = nodemcu
 
 ; *** Upload Serial reset method for Wemos and NodeMCU
-upload_port               = COM4
+upload_port               = COM3
 extra_scripts             = pio/strip-floats.py
 
 ; *** Upload file to OTA server using SCP
