--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,12 @@
 src_dir = sonoff
 
 ; *** Uncomment one of the lines below to build/upload only one environment
-;env_default = sonoff
+env_default = sonoff
 ;env_default = sonoff-minimal
 ;env_default = sonoff-basic
 ;env_default = sonoff-classic
 ;env_default = sonoff-knx
-env_default = sonoff-sensors
+;env_default = sonoff-sensors
 ;env_default = sonoff-display
 ;env_default = sonoff-BG
 ;env_default = sonoff-BR
@@ -146,6 +146,8 @@ build_unflags             = -Wall
 board_build.f_cpu         = 80000000L
 ;board_build.f_cpu         = 160000000L
 
+;monitor_speed             = 115200
+;upload_speed              = 115200
 monitor_speed             = 115200
 upload_speed              = 115200
 upload_resetmethod        = nodemcu
